# face_door_demo

./: .gitignore  README.md  WINDOWS_SETUP.md  config.py  find_bt_port.py  main.py  prompt.txt  pyproject.toml  recognize_camera.py  register_faces.py  requirements.txt  utils.py
arduino/: WIRING.md  接線圖_SERVO版.txt
arduino/AT_Scanner/: AT_Scanner.ino
arduino/face_door/: face_door.ino
